fix: overflow responsive layout

--- a/styles/Berita.module.css
+++ b/styles/Berita.module.css
@@ -68,10 +68,14 @@
 }
 
 .cardImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImage img {
   width: 356px;
   height: 254px;
-  left: 0px;
-  top: 0px;
   border-top-right-radius: 19.7761px;
   border-top-left-radius: 19.7761px;
 }
@@ -147,9 +151,12 @@
     height: 100%;
     padding: 40px 0px;
   }
+
   .cards {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
   
   .header {
@@ -169,5 +176,20 @@
     width: 100%;
     height: 100%;
     font-size: 1.4rem;
+  }
+  
+  .cardImage img {
+    width: 356px;
+    height: 254px;
+    border-radius: 0px;
+  }
+  
+  .card {
+    width: 100%;
+    margin: 15px 0px;
+  }
+  
+  .text {
+    width: 100%;
   }
 }
