--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -73,11 +73,16 @@
 
 @media (max-width: 960px) {
   .container {
+    width: 100%;;
     height: 400px;
   }
   
   .inner_container {
     flex-direction: column;
     height: 200px;
+  }
+  
+  .social {
+    display: none;
   }
 }
