--- a/styles/Personalia.module.css
+++ b/styles/Personalia.module.css
@@ -143,12 +143,15 @@
     height: 100%;
     padding: 40px 0px;
   }
+
   .profiles {
+    width: 100%;
     flex-direction: column;
     align-items: center;
   }
 
   .profiles2 {
+    width: 100%;
     flex-direction: column;
     align-items: center;
   }
